--- a/src/app/component/customer/menu-list-item/menu-list-item.component.scss
+++ b/src/app/component/customer/menu-list-item/menu-list-item.component.scss
@@ -17,3 +17,9 @@
   width: 100%;
   height: auto;
 }
+hr{
+  margin-top: 0px;
+  margin-bottom: 0px;
+  border: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
