--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <mat-sidenav-content>
       <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
       <main>
+        <app-find-component></app-find-component>
         <router-outlet ></router-outlet>
       </main>
     </mat-sidenav-content>
