--- a/src/app/component/card-show-item/card-show-item.component.html
+++ b/src/app/component/card-show-item/card-show-item.component.html
@@ -1,3 +1,3 @@
-<app-card-customer [header]="'false'" [imageContent]="'false'" [data]="videos">
+<app-card-customer [header]="'false'" [imageContent]="'false'" [data]="dataForward">
 
 </app-card-customer>
