--- a/src/app/component/customer/card-customer/card-customer.component.scss
+++ b/src/app/component/customer/card-customer/card-customer.component.scss
@@ -8,6 +8,7 @@ mat-card {
   margin-bottom: 10px;
   margin-left: 5px;
   margin-right: 5px;
+  border-radius: 0px;
 }
 mat-card-header{
   padding: 10px;
@@ -26,32 +27,26 @@ mat-card-content{
   display: flex;
   align-items: center;
   padding: 10px;
-  border-radius: 5px;
   background-color: #066f6f1c;
   flex: auto;
   justify-content: flex-end;
   font-weight: 750;
-  box-shadow: 1px 1px 1px 1px grey;
+  box-shadow: 1px 1px 1px 1px gainsboro;
 }
 .container-search{
-  padding:10px;
+  font-size: 38.5px;
+  padding: 5px;
+
 }
 
 .fix {
-  background-color: red!important ;
   overflow: hidden;
   position: fixed; // overflow will be work;
   height: 100%;
 }
-
-// html {
-//   overflow: hidden;
-//   height: 100%;
-//   position: fixed;
-// }
-
-// body {
-//   overflow: auto;
-//   height: 100%;
-//   position: relative;
-// }
+.card-not-media{
+  .mat-card-image{
+    margin: auto;
+    width: 100%;
+  }
+}
