--- a/src/app/component/customer/carousel-customer/carousel-customer.component.scss
+++ b/src/app/component/customer/carousel-customer/carousel-customer.component.scss
@@ -13,20 +13,57 @@
   .owl-carousel {
     .owl-nav {
       overflow: hidden;
+      overflow: hidden;
+      display: flex;
+      justify-content: space-between;
+      margin: auto;
     }
   }
 
    .owl-carousel  {
       .nav-btn-back{
-        height: 100px;
-        width: 100%;
+        height: 30px;
+        width: 30px;
         cursor: pointer;
+        position: absolute;
+        top: 6em;
+        bottom: 0px;
+        left: 0px;
+        transform: rotate(180deg);
+        z-index: 999;
+        border: 0px;
+        font-weight: 200;
       }
       .nav-btn-next{
-        height: 100px;
-        width: 100px;
+        height: 30px;
+        width: 30px;
         cursor: pointer;
+        position: absolute;
+        top: 6em;
+        bottom: 0px;
+        right: 0px;
+        z-index: 999;
+        border: 0px;
       }
+  }
+  .number-lesson{
+    display: inline-flex;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    padding: 10px;
+    width: 10%;
+    margin-top: 5px;
+  }
+  .name-lesson{
+    font-size: 20px;
+    padding: 15px;
+    font-weight: 400;
+    display: inline-flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 90%;
   }
 }
 
