--- a/src/app/component/customer/list-item-customer/list-item-customer.component.html
+++ b/src/app/component/customer/list-item-customer/list-item-customer.component.html
@@ -11,6 +11,8 @@
   </span>
 </mat-list-item>
 <div *ngIf="expanded">
-  <app-list-item *ngFor="let child of item.children" [item]="child" [depth]="depth+1" [mobile]="mobile">
-  </app-list-item>
+  <div *ngFor="let child of item.children">
+    <app-list-item  [item]="child" [depth]="depth+1" [mobile]="mobile"></app-list-item>
+    <hr>
+  </div>
 </div>
