--- a/src/app/component/customer/menu-list-item/menu-list-item.component.html
+++ b/src/app/component/customer/menu-list-item/menu-list-item.component.html
@@ -5,7 +5,10 @@
         <img [src]="logoIcon" class="image-responsive">
       </div>
       <mat-list gdArea="content" gdAreas="sub_content|sub_icon">
-        <app-list-item *ngFor="let item of menuElement" [item]="item"></app-list-item>
+          <div *ngFor="let item of menuElement">
+            <app-list-item  [item]="item"></app-list-item>
+            <hr>
+          </div>
       </mat-list>
     </div>
   </div>
