--- a/src/app/component/topic-admin/topic.component.scss
+++ b/src/app/component/topic-admin/topic.component.scss
@@ -1,5 +1,14 @@
 .form-topic{
-  width:100%
+  width:100%;
+  textarea.form-control {
+    max-height: 200px;
+    height: 120px;
+    border: 2px #d6d3d3 solid;
+  }
+  .btn-primary{
+    border-radius: 0px;
+    width: 120px
+  }
 }
 .button-topic{
  width: 10px;
@@ -8,4 +17,18 @@ mat-form-field{
   margin-left: 20px;
   width: auto;
 
+}
+.action-container{
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-end;
+  .action-wrap{
+    width: 150px;
+    margin-right: 15px;
+  }
+  a{
+    width: 100%;
+    color: white;
+    border-radius: 0px;
+  }
 }
